Addition of initial site resources

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khanh Phan: Personal Site and Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Khanh Phan</h1>
-        <p> Visualization practice for portfolio</p>
+    <p>Visualization practice for portfolio</p>
+    <br>
+    <p>While this is under construction, meet Mr. Chase!</p>
+    <img src="images/chase.jpg" alt="Chase the Yorkie" width="400">
 </body>
 </html>
