--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="projects/index.html">Projects</a>
+        <a href="contact/index.html">Contact</a> 
+        <a href="resume/index.html">Resume</a>
+        <a href="https://github.com/k-phantastic" target="_blank">GitHub</a>
+    </nav>
     <h1>Khanh Phan</h1>
     <p>Visualization practice for portfolio</p>
     <br>
