--- a/projects/index.html
+++ b/projects/index.html
@@ -15,5 +15,6 @@
         <a href="https://github.com/k-phantastic" target="_blank">GitHub</a>
     </nav>
     <h1>Projects</h1>
+    <p>Will be updating the page with my projects!</p>
 </body>
 </html>
