--- a/resume/index.html
+++ b/resume/index.html
@@ -11,7 +11,7 @@
         <a href="../index.html">Home</a>
         <a href="../projects/index.html">Projects</a>
         <a href="../contact/index.html">Contact</a> 
-        <a href="index.html">Resume</a>
+        <a href="index.html" class="current">Resume</a>
         <a href="https://github.com/k-phantastic" target="_blank">GitHub</a>
     </nav>
     
@@ -76,6 +76,6 @@
     </a>
     </div>
     <br><br>
-    <embed src="../files/KhanhPhan_Resume.pdf" width="750" height="970" type="application/pdf">
+    <embed src="../files/KhanhPhan_Resume.pdf" class="resume-embed" type="application/pdf">
 </body>
 </html>
