--- a/projects/index.html
+++ b/projects/index.html
@@ -9,12 +9,74 @@
 <body>
     <nav>
         <a href="../index.html">Home</a>
-        <a href="index.html">Projects</a>
+        <a href="index.html" class="current">Projects</a>
         <a href="../contact/index.html">Contact</a> 
         <a href="../resume/index.html">Resume</a>
         <a href="https://github.com/k-phantastic" target="_blank">GitHub</a>
     </nav>
     <h1>Projects</h1>
     <p>Will be updating the page with my projects!</p>
+    <div class="projects">
+        <article>
+            <h2>Lorem ipsum dolor sit.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam perspiciatis quidem corporis quis eveniet voluptates quibusdam fugit maiores magnam laudantium mollitia tempore facilis saepe est suscipit dolorum quo, quia obcaecati?</p>
+        </article>
+        <article>
+            <h2>Molestias error ad incidunt.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Sequi labore nesciunt nulla deleniti omnis, est quas illum excepturi hic voluptates suscipit ut id quia debitis consequuntur assumenda sed aliquam vero ab! Unde nobis et dolores at, nesciunt quod.</p>
+        </article>
+        <article>
+            <h2>Ratione accusamus quasi dolorem!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Et dolore molestias tenetur quos quis, eveniet temporibus dolorum. A molestias ut repellat rem eius amet voluptates, cumque nulla temporibus minus similique magnam eaque perspiciatis est tenetur, enim modi ratione.</p>
+        </article>
+        <article>
+            <h2>Quod quisquam officiis amet.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Natus voluptatibus libero doloremque. Iste provident, similique molestiae ipsa dignissimos eos? Nisi, dolorum dolores. Commodi dignissimos cumque dolore ipsum. Et sit rerum amet necessitatibus error minus tempora nostrum sed alias?</p>
+        </article>
+        <article>
+            <h2>Iure deserunt consequuntur nisi?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Dignissimos nam similique facere minus pariatur velit placeat sunt natus et, aut consequuntur in explicabo quasi saepe maxime est magnam repellat doloremque voluptas odio. Doloribus ut ad repellat obcaecati voluptatibus.</p>
+        </article>
+        <article>
+            <h2>In voluptatum illum ratione.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Amet atque deleniti eaque odit, accusamus ad laudantium assumenda facere rem totam itaque sint, doloribus nisi qui dolorem sunt, quis rerum est reiciendis non ut. Suscipit maxime repellat fugit beatae!</p>
+        </article>
+        <article>
+            <h2>Consectetur tempora eaque nam.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Non deleniti molestiae quo dolorum cupiditate neque beatae hic, aliquid labore, aperiam necessitatibus accusamus corporis blanditiis illum iste amet qui velit fugiat? Est placeat, repellendus atque distinctio impedit repellat animi!</p>
+        </article>
+        <article>
+            <h2>Dolore placeat autem odit.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Error incidunt corporis similique optio inventore laboriosam aliquam sit voluptatum aut expedita, exercitationem ut perspiciatis. Tempore, id ipsam maiores sapiente aut nesciunt illum in, sed quisquam deleniti molestiae eos alias!</p>
+        </article>
+        <article>
+            <h2>Illo quibusdam aperiam aliquam.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Hic animi consequuntur, aliquid exercitationem reiciendis velit maxime optio ipsam veniam unde neque ex fugit provident, sapiente cumque excepturi fuga nam sunt officia voluptatem eum quidem blanditiis illum? Vero, provident.</p>
+        </article>
+        <article>
+            <h2>Quibusdam explicabo quasi quam?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Voluptate unde tempora quod. Deserunt unde nam laboriosam officia id totam ut alias sequi in dolor commodi, et enim vel assumenda voluptatem cum sed excepturi ratione voluptas mollitia minima laborum!</p>
+        </article>
+        <article>
+            <h2>Maxime magni repudiandae facilis?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Nemo voluptatibus, dolor nesciunt itaque suscipit assumenda necessitatibus. Accusamus, aliquam nihil! Temporibus, nesciunt voluptates dignissimos qui labore nisi aperiam error hic quae voluptatibus autem fuga, impedit enim obcaecati delectus placeat!</p>
+        </article>
+        <article>
+            <h2>Quibusdam itaque doloremque cum.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Accusantium, non veniam, autem debitis inventore reiciendis repudiandae quaerat aliquam quo et a iure aliquid quidem. Voluptas hic aliquam tempore nostrum illum non, eligendi quas, ex totam qui ipsam quaerat!</p>
+        </article>
+    </div>
 </body>
 </html>
