--- a/projects/index.html
+++ b/projects/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <nav>
+    <!-- <nav>
         <a href="../index.html">Home</a>
-        <a href="index.html" class="current">Projects</a>
+        <a href="index.html">Projects</a>
         <a href="../contact/index.html">Contact</a> 
         <a href="../resume/index.html">Resume</a>
         <a href="https://github.com/k-phantastic" target="_blank">GitHub</a>
-    </nav>
+    </nav> -->
     <h1>Projects</h1>
     <p>Will be updating the page with my projects!</p>
     <div class="projects">
@@ -78,5 +78,6 @@
             <p>Accusantium, non veniam, autem debitis inventore reiciendis repudiandae quaerat aliquam quo et a iure aliquid quidem. Voluptas hic aliquam tempore nostrum illum non, eligendi quas, ex totam qui ipsam quaerat!</p>
         </article>
     </div>
+    <script type="module" src="../global.js"></script>  
 </body>
 </html>
