--- a/resume/index.html
+++ b/resume/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <nav>
+    <!-- <nav>
         <a href="../index.html">Home</a>
         <a href="../projects/index.html">Projects</a>
         <a href="../contact/index.html">Contact</a> 
-        <a href="index.html" class="current">Resume</a>
+        <a href="index.html">Resume</a>
         <a href="https://github.com/k-phantastic" target="_blank">GitHub</a>
-    </nav>
+    </nav> -->
 <div class ="resume-page">
     <header class="resume-header">
         <h1>Khanh Phan</h1>
@@ -82,5 +82,6 @@
     <br><br>
     <embed src="../files/KhanhPhan_Resume.pdf" class="resume-embed" type="application/pdf">
 </div>
+    <script type="module" src="../global.js"></script>
 </body>
 </html>
