--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="home">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <a href="index.html" class="current">Home</a>
+    <!-- <nav>
+        <a href="index.html">Home</a>
         <a href="projects/index.html">Projects</a>
         <a href="contact/index.html">Contact</a> 
         <a href="resume/index.html">Resume</a>
         <a href="https://github.com/k-phantastic" target="_blank">GitHub</a>
-    </nav>
+    </nav> -->
     <h1>Khanh Phan</h1>
     <p>Visualization practice for portfolio</p>
     <br>
@@ -27,5 +27,8 @@ Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapi
 Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
 
     <center><img src="images/chase.jpg" alt="Chase the Yorkie" width="400"></center>
+    
+    <script type="module" src="global.js"></script>
+
 </body>
 </html>
