Additional JS for loading projects

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khanh Phan: Personal Site and Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="global.js" type="module"></script>
+    <script src="index.js" type="module"></script>
 </head>
 <body>
     <!-- <nav>
@@ -21,14 +23,22 @@
 
     <!-- Testing CSS -->
     <p>810 Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+    </p>
+    <br>
+    <br>
 
     <center><img src="images/chase.jpg" alt="Chase the Yorkie" width="400"></center>
-    
-    <script type="module" src="global.js"></script>
+    <br>
+    <br>
 
+    <h2>My Latest Projects</h2>
+    <div class="latest-projects">
+    <!-- Dynamically added content will appear here for projects -->
+    </div>
+    <br>
+    <h2>My GitHub Stats</h2>
+    <div id="profile-stats">
+    <!-- Dynamically added content will appear here for GitHub-->
+    </div>
 </body>
 </html>
