--- a/project2_report/report.html
+++ b/project2_report/report.html
@@ -159,7 +159,7 @@
 
         <figure>
           <img src="for.png" alt="" />
-          <figcaption>BRIEF CAPTION HERE.</figcaption>
+          <figcaption>Difference in count between non-POC and POC complaints over time, showing a marked increase in complaints by people of color from 2000 to 2016</figcaption>
         </figure>
 
         <p>Design Decisions and Rationale:</p>
@@ -177,7 +177,7 @@
 
         <figure>
           <img src="against.png" alt="" />
-          <figcaption>BRIEF CAPTION HERE.</figcaption>
+          <figcaption>Count of complaints by white and non-white ethnicity groups over time, showing a similar shape in trend from 2000 to 2015.</figcaption>
         </figure>
 
         <p>Design Decisions and Rationale:</p>
