Addition of pie chart

--- a/projects/index.html
+++ b/projects/index.html
@@ -17,7 +17,19 @@
         <a href="https://github.com/k-phantastic" target="_blank">GitHub</a>
     </nav> -->
     <h1 class="projects-title">Projects</h1>
-    <p>Will be updating the page with my projects!</p>
+    <div class ="container">
+        <svg id="projects-pie-plot" viewBox="-50 -50 100 100"></svg>
+        <ul class="legend"></ul>
+
+    </div>
+    <input
+    class="searchBar"
+    type="search"
+    aria-label="Search projects"
+    placeholder="🔍 Search projects…"
+    />
+    <br/>
+    <br/>
     <div class="projects">
     <!-- Dynamically added content will appear here for projects -->
     </div>
