Update axes, plot

--- a/meta/index.html
+++ b/meta/index.html
@@ -11,8 +11,13 @@
 <body>
     <h1>Meta</h1>
     <p>This page includes stats about the code of the website</p>
+    <h2>Summary</h2>
     <div id="stats">
         <!-- Dynamically added content will appear here for meta stats -->
     </div>
+    <br>
+    <h2>Commits by time of day</h2>
+    <br>
+    <div id="chart"></div>
 </body>
 </html>
