--- a/meta/index.html
+++ b/meta/index.html
@@ -29,14 +29,11 @@
         <dd id="commit-date"></dd>
 
         <!-- Add: Time, author, lines edited -->
-        <!-- <dt>Time</dt>
+        <dt>Time</dt>
         <dd id="commit-time"></dd>
 
-        <dt>Author</dt>
-        <dd id="commit-author"></dd>
-
         <dt>Lines Edited</dt>
-        <dd id="commit-lines-edited"></dd> -->
+        <dd id="commit-lines-edited"></dd>
     </dl>
 </body>
 </html>
