Barebones prior to final CSS

--- a/meta/index.html
+++ b/meta/index.html
@@ -35,5 +35,8 @@
         <dt>Lines Edited</dt>
         <dd id="commit-lines-edited"></dd>
     </dl>
+    <p id="selection-count">No commits selected</p>
+    <dl id="language-breakdown" class="stats"></dl>
+
 </body>
 </html>
