--- a/project2_report/report.html
+++ b/project2_report/report.html
@@ -159,7 +159,7 @@
         <h3>FOR the Proposition</h3>
 
         <figure>
-          <img src="for.png" alt="" />
+          <img src="../_images/for.png" alt="" />
           <figcaption>Difference in count between non-POC and POC complaints over time, showing a marked increase in complaints by people of color from 2000 to 2016</figcaption>
         </figure>
 
@@ -177,7 +177,7 @@
         <h3>AGAINST the Proposition</h3>
 
         <figure>
-          <img src="against.png" alt="" />
+          <img src="../_images/against.png" alt="" />
           <figcaption>Count of complaints by white and non-white ethnicity groups over time, showing a similar shape in trend from 2000 to 2015.</figcaption>
         </figure>
 
