--- a/projects/index.html
+++ b/projects/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="icon" type="image/png" href="/project/images/favicon.png">
+<!-- <link rel="icon" type="image/png" href="/project/images/favicon.png"> -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" href="../style.css">
-    <script src="../global.js" type="module"></script>
-    <script src="projects.js" type="module"></script>
+    <link rel="stylesheet" href="../styles/style.css">
+    <script type="module" src="../scripts/global.js"></script>
+    <script type="module" src="../scripts/projects.js"></script>
 </head>
 <body>
     <!-- <nav>
