Revert "Directory overhaul"
This reverts commit 46d07035423b551c03b56673667beddbbacfd0c8.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khanh Phan: Personal Site and Portfolio</title>
-    <link rel="stylesheet" href="/styles/style.css">
-    <script src="/scripts/global.js" type="module"></script>
-    <script src="/scripts/index.js" type="module"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="global.js" type="module"></script>
+    <script src="index.js" type="module"></script>
 </head>
 <body>
     <h1>Khanh Phan</h1>
@@ -20,7 +20,7 @@
     <br>
     <br>
 
-    <center><img src="_images/chase.jpg" alt="Chase the Yorkie" width="400"></center>
+    <center><img src="images/chase.jpg" alt="Chase the Yorkie" width="400"></center>
     <br>
     <br>
 
