--- a/contact/index.html
+++ b/contact/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Information</title>
-    <link rel="stylesheet" href="../styles/style.css">
-    <script type="module" src="../scripts/global.js"></script>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <!-- <nav>
@@ -28,5 +27,6 @@
         <textarea id="message" name="message" rows="4" cols="50" required></textarea>
         
         <button type="submit">Send</button>
+    <script type="module" src="../global.js"></script>
 </body>
 </html>
