--- a/resume/index.html
+++ b/resume/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
-    <link rel="stylesheet" href="../styles/style.css">
-    <script type="module" src="../scripts/global.js"></script>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 <div class ="resume-page">
@@ -60,7 +59,7 @@
     </section>
     <br>
     <div style="text-align: left;">
-    <a href="../_files/KhanhPhan_Resume.pdf" download aria-label="Download My Resume!" style="
+    <a href="../files/KhanhPhan_Resume.pdf" download aria-label="Download My Resume!" style="
         background-color:rgb(150, 150, 150);
         color: white;
         padding: 10px 20px;
@@ -74,7 +73,8 @@
     </a>
     </div>
     <br><br>
-    <embed src="../_files/KhanhPhan_Resume.pdf" class="resume-embed" type="application/pdf">
+    <embed src="../files/KhanhPhan_Resume.pdf" class="resume-embed" type="application/pdf">
 </div>
+    <script type="module" src="../global.js"></script>
 </body>
 </html>
