--- a/meta/index.html
+++ b/meta/index.html
@@ -39,7 +39,7 @@
         <p id="selection-count">No commits selected</p>
 
         <!-- Time Controls -->
-        <header class = "timeControls">
+        <div class = "timeControls">
             <label for="commit-progress">Show commits until:
                 <input 
                 type = "range"
@@ -48,8 +48,8 @@
                 max = "100" 
                 />   
             </label>
-            <time id="commit-time"></time>
-        </header>
+        </div>
+        <time id="commit-slider-time"></time>
         <!-- Language Breakdown -->
         <div id="language-breakdown" class="stats"></div>
     </div>
