Removed old slider

--- a/meta/index.html
+++ b/meta/index.html
@@ -39,10 +39,10 @@
                     <dt>Lines Edited</dt>
                         <dd id="commit-lines-edited"></dd>
                 </dl>
-                <p id="selection-count">No commits selected</p>
+                <p id="selection-count">No commits highlighted</p>
 
                 <!-- Time Controls -->
-                <div class = "timeControls">
+                <!-- <div class = "timeControls">
                     <label for="commit-progress">Show commits until:
                         <input 
                         type = "range"
@@ -53,7 +53,7 @@
                         />   
                     </label>
                 </div>
-                <time id="commit-slider-time"></time>
+                <time id="commit-slider-time"></time> -->
 
                 
                 <dl id="files">
