--- a/meta/index.html
+++ b/meta/index.html
@@ -15,30 +15,31 @@
     <div id="web-commit-stats">
         <!-- Dynamically added content will appear here for meta stats -->
     </div>
+
     <br>
     <h2>Commits by Time of Day</h2>
     <br>
+
+    <!-- Scrolly-telling for commits by time of day -->
     <div id="scrolly-1">
+        <!-- Left side, narrative text commits -->
         <div id="scatter-story"></div>
         <div id="scatter-plot">
             <div class="chart-layout">
+                <!-- Scatter Plot  -->
                 <div id="chart"></div>
+                <!-- Tooltip for scatterplot bubbles -->
                 <dl id="commit-tooltip" class="info tooltip" hidden>
                     <dt>Commit</dt>
-                        <dd>
-                            <a href="" id="commit-link" target="_blank"></a>
-                        </dd>
-
+                        <dd><a href="" id="commit-link" target="_blank"></a></dd>
                     <dt>Date</dt>
                         <dd id="commit-date"></dd>
-
-                    <!-- Add: Time, author, lines edited -->
                     <dt>Time</dt>
                         <dd id="commit-time"></dd>
-
                     <dt>Lines Edited</dt>
                         <dd id="commit-lines-edited"></dd>
                 </dl>
+                <!-- Default message when none highlighted on chart interaction -->
                 <p id="selection-count">No commits highlighted</p>
 
                 <!-- Time Controls -->
@@ -55,22 +56,21 @@
                 </div>
                 <time id="commit-slider-time"></time> -->
 
-                
-                <dl id="files">
-                    <!-- we want the following structure for each file:
-                    <div>
-                        <dt>
-                        <code>{file.name}</code>
-                        </dt>
-                        <dd>{file.lines.length} lines</dd>
-                    </div>
-                    -->
-                </dl>
+
+                <dl id="files"></dl>
 
                 <!-- Language Breakdown -->
                 <div id="language-breakdown" class="stats"></div>
             </div>
         </div>
     </div> 
+
+    <!-- <div id="scrolly-files" class="scrolly">
+        <div id="file-story" class="story"></div>
+
+        <div id="file-viz" class="viz">
+            <dl id="files"></dl>
+        </div>
+    </div> -->
 </body>
 </html>
